--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,5 +26,6 @@
     <string name="category">Категория: </string>
     <string name="category_description">Описание категории: </string>
     <string name="error_deleting_point">Ошибка при удалении точки</string>
+    <string name="network_error_authorization">Для продолжения работы подключите интернет и перезапустите приложение</string>
 
 </resources>
