--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,5 @@
     <string name="category">Category: </string>
     <string name="category_description">Category description: </string>
     <string name="error_deleting_point">Error while deleting point</string>
-    <string name="network_error_authorization">Для продолжения работы подключите интернет</string>
-
+    <string name="network_error_authorization">To continue the process, connect to the internet and restart application</string>
 </resources>
