--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="action_add_new_point">Add new point</string>
     <string name="done">Done</string>
 
-    <string name="mapbox_id_street" translatable="false">alexander1.gdaod0en</string>
-    <string name="mapbox_token" translatable="false">sk.eyJ1IjoiYWxleGFuZGVyMSIsImEiOiJReWtia2VVIn0.b4rUN0uiKdVGzgq4mAA7ZQ</string>
+    <string name="mapbox_id_street" translatable="false">ksarkes.279c7439</string>
+    <string name="mapbox_token" translatable="false">pk.eyJ1Ijoia3NhcmtlcyIsImEiOiJjOTBlMTdkOWFlYTE1OGNlYjU1YWI2NTc3OTk2YmZhZSJ9.Nqsg_A3M5YrEWqwoZ5fdYA</string>
 
     <string name="no_network">No network connection found. You can save point locally and upload it later.</string>
     <string name="saved_to_local_db">Saved to local database</string>
